# jetpath

./: CMakeLists.txt  Makefile  README.md  jetpath  main.cpp  prog  testCommandManager  test_runner
.github/workflows/: ci.yml  test.yml
src/: FastFileIndexHash.h  auditParser.h  bTree.cpp  bTree.h  bTreeNode.cpp  bTreeNode.h  commandAduitFlags.txt  commandManager.h  main.cpp  sizeCatergory.h
tests/: fileOperationsForTests.cpp  fileOperationsForTests.h  testCommandManager  testCommandManager.cpp  test_CommandManager  test_main.cpp  test_runner
tests/testAssets/: testLog.txt
